-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6
-
None
-
e5309b0f5 (dev), a2246227f (6.6), d8ceb1a39 (6.5)
Reported upstream at https://github.com/NVIDIAGameWorks/PhysX/issues/640
src/3rdparty/PhysX/source/scenequery/src/SqBucketPruner.cpp:1205:16: warning: type ‘struct RayParams’ violates the C++ One Definition Rule [-Wodr] src/3rdparty/PhysX/source/geomutils/src/mesh/GuBV4_CapsuleSweepAA.cpp:46:16: note: a different type is defined in another translation unit src/3rdparty/PhysX/source/scenequery/src/SqBucketPruner.cpp:1207:17: note: the first difference of corresponding definitions is field ‘mData2’ 1207 | PX_ALIGN(16, PxVec3 mData2); float padding0; src/3rdparty/PhysX/source/geomutils/src/mesh/GuBV4_CapsuleSweepAA.cpp:48:17: note: a field with different name is defined in another translation unit 48 | BV4_ALIGN16(Vec3p mCenterOrMinCoeff_PaddedAligned);
Please monitor the upstream and backport the fix when it's available.
For Gerrit Dashboard: QTBUG-114114 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
493638,2 | Fix PhysX ODR violations | dev | qt/qtquick3dphysics | Status: MERGED | +2 | 0 |
493879,2 | Fix PhysX ODR violations | 6.6 | qt/qtquick3dphysics | Status: MERGED | +2 | 0 |
493880,2 | Fix PhysX ODR violations | 6.5 | qt/qtquick3dphysics | Status: MERGED | +2 | 0 |