Fix PhysX ODR violations

Fixes: QTBUG-114114
Pick-to: 6.5 6.6
Change-Id: If560716dba21a8156ac6a30ccf0bd1c2960d18ad
Reviewed-by: Christian Strømme <christian.stromme@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: Hatem ElKharashy <hatem.elkharashy@qt.io>